--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Improve your mind.">
     <meta name="author" content="Leone Veiga">
 
-    <title>Landing Page</title>
+    <title>Plus and Times</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -27,7 +27,7 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    <link rel="shortcut icon" href="/img/favicon.ico"></link>
+    <link rel="shortcut icon" href="img/favicon.ico"></link>
 
 
 <style>
