--- a/level05_218683.html
+++ b/level05_218683.html
@@ -214,7 +214,7 @@
                 <div class="col-xs-10">
                       
                       <form id="form_A" onkeypress="return event.keyCode != 13;">
-                          <h3 class="name"> A = <input style="color:blue; width: 50px; height:5vm; text-align:center;" type="text" name="Au" id="user_A" > </h3>
+                          <h3 class="name"> A = <input style="color:blue; width: 50px; height:5vm; text-align:center;" type="text" name="Au" id="user_A" disabled="disabled"> </h3>
                       </form>
 
                       <!-- Teclado A -->
@@ -271,7 +271,7 @@
 
                   <div class="col-xs-10">
                         <form id="form_B" onkeypress="return event.keyCode != 13;">  
-                            <h3 class="name"> B = <input style="color:blue; width: 50px; height:5vm; text-align:center;" type="text" name="Bu" id="user_B" > </h3>
+                            <h3 class="name"> B = <input style="color:blue; width: 50px; height:5vm; text-align:center;" type="text" name="Bu" id="user_B" disabled="disabled" > </h3>
                         </form>
 
                         <div class="row">
