--- a/level04_268734.html
+++ b/level04_268734.html
@@ -241,9 +241,9 @@
                       </div>
                       <div class="row">
                         <div class="btn-group">
-                          <a type="button" class="btn btn-primary" > - </a>
+                          <a type="button" class="btn btn-primary" disabled> &minus; </a> 
                           <a type="button" class="btn btn-primary" onclick="A0();">0</a>
-                          <a type="button" class="btn btn-primary"> - </a>                    
+                          <a type="button" class="btn btn-primary" disabled> &minus; </a>                   
                         </div>
                       </div>
 
@@ -297,9 +297,9 @@
                         </div>
                         <div class="row">
                           <div class="btn-group">
-                            <a type="button" class="btn btn-primary" > - </a>
+                            <a type="button" class="btn btn-primary" disabled> &minus; </a> 
                             <a type="button" class="btn btn-primary" onclick="B0();">0</a>
-                            <a type="button" class="btn btn-primary"> - </a>                    
+                            <a type="button" class="btn btn-primary" disabled> &minus; </a>                  
                           </div>
                         </div>
                   </div>
