--- a/level06.html
+++ b/level06.html
@@ -280,9 +280,9 @@ pg = p;
                       </div>
                       <div class="row">
                         <div class="btn-group">
-                          <a type="button" class="btn btn-primary" onclick="PA0();"> &plus; </a>
+                          <a type="button" class="btn btn-info" onclick="PA0();"> C </a>
                           <a type="button" class="btn btn-primary" onclick="A0();">0</a>
-                          <a type="button" class="btn btn-primary" onclick="MA0();"> &minus; </a>           
+                          <a type="button" class="btn btn-danger" onclick="MA0();"> &minus; </a>           
                         </div>
                       </div>
 
@@ -294,9 +294,12 @@ pg = p;
           </div>
 
           <div class="col-md-2 col-xs-2">
-             <div class="row text-center">
-              <img id="myImage"  src="img/pensativo50.jpg" >
+              <div class="row text-center">
+                <img id="myImage"  src="img/pensativo50.jpg" >
+                <h1> &nbsp; </h1>
               </div>
+
+
               <div class="row text-center">
               <a href="#" onclick="compara();" class="btn btn-primary">Go</a>
             </div>
@@ -341,9 +344,9 @@ pg = p;
                         </div>
                         <div class="row">
                           <div class="btn-group">
-                          <a type="button" class="btn btn-primary" onclick="PB0();"> &plus; </a>
+                          <a type="button" class="btn btn-info" onclick="PB0();"> C </a>
                           <a type="button" class="btn btn-primary" onclick="B0();">0</a>
-                          <a type="button" class="btn btn-primary" onclick="MB0();"> &minus; </a>                      
+                          <a type="button" class="btn btn-danger" onclick="MB0();"> &minus; </a>                      
                           </div>
                         </div>
                   </div>
@@ -357,11 +360,11 @@ pg = p;
 
 <!-- =============================================== -->
 
-    <p style="font-size:12px">A = <a id="mostra_user_A"></a></p>
-    <p style="font-size:12px">B = <a id="mostra_user_B"></a></p>
+    <p style="font-size:0px">A = <a id="mostra_user_A"></a></p>
+    <p style="font-size:0px">B = <a id="mostra_user_B"></a></p>
 
-      <h6 style="font-size:12px"> A  = <a style="font-size:0px" id="n1"></a></h6>
-      <h6 style="font-size:12px"> B  = <a style="font-size:0px" id="n2"></a></h6>
+      <h6 style="font-size:0px"> A  = <a style="font-size:0px" id="n1"></a></h6>
+      <h6 style="font-size:0px"> B  = <a style="font-size:0px" id="n2"></a></h6>
 
 
     </section>
