--- a/level01_925148.html
+++ b/level01_925148.html
@@ -57,6 +57,9 @@
       var sg;
       var pg;
 
+      var MA = 1;
+      var MB = 1;
+
       function myFunction() {
 
           var x = document.getElementById("n1")
@@ -131,33 +134,50 @@
 
       }
 
-      function A0(){document.getElementById("user_A").value = "0";}
-      function A1(){document.getElementById("user_A").value = "1";}
-      function A2(){document.getElementById("user_A").value = "2";}
-      function A3(){document.getElementById("user_A").value = "3";}
-      function A4(){document.getElementById("user_A").value = "4";}
-      function A5(){document.getElementById("user_A").value = "5";}
-      function A6(){document.getElementById("user_A").value = "6";}
-      function A7(){document.getElementById("user_A").value = "7";}
-      function A8(){document.getElementById("user_A").value = "8";}
-      function A9(){document.getElementById("user_A").value = "9";}
-      function A10(){document.getElementById("user_A").value = "10";}
-      function A11(){document.getElementById("user_A").value = "11";}
-      function A12(){document.getElementById("user_A").value = "12";}
+      function A0(){document.getElementById("user_A").value = 0*MA;}
+      function A1(){document.getElementById("user_A").value = 1*MA;}
+      function A2(){document.getElementById("user_A").value = 2*MA;}
+      function A3(){document.getElementById("user_A").value = 3*MA;}
+      function A4(){document.getElementById("user_A").value = 4*MA;}
+      function A5(){document.getElementById("user_A").value = 5*MA;}
+      function A6(){document.getElementById("user_A").value = 6*MA;}
+      function A7(){document.getElementById("user_A").value = 7*MA;}
+      function A8(){document.getElementById("user_A").value = 8*MA;}
+      function A9(){document.getElementById("user_A").value = 9*MA;}
+      function A10(){document.getElementById("user_A").value = 10*MA;}
+      function A11(){document.getElementById("user_A").value = 11*MA;}
+      function A12(){document.getElementById("user_A").value = 12*MA;}
 
-      function B0(){document.getElementById("user_B").value = "0";}
-      function B1(){document.getElementById("user_B").value = "1";}
-      function B2(){document.getElementById("user_B").value = "2";}
-      function B3(){document.getElementById("user_B").value = "3";}
-      function B4(){document.getElementById("user_B").value = "4";}
-      function B5(){document.getElementById("user_B").value = "5";}
-      function B6(){document.getElementById("user_B").value = "6";}
-      function B7(){document.getElementById("user_B").value = "7";}
-      function B8(){document.getElementById("user_B").value = "8";}
-      function B9(){document.getElementById("user_B").value = "9";}
-      function B10(){document.getElementById("user_B").value = "10";}
-      function B11(){document.getElementById("user_B").value = "11";}
-      function B12(){document.getElementById("user_B").value = "12";}
+      function B0(){document.getElementById("user_B").value = 0*MB;}
+      function B1(){document.getElementById("user_B").value = 1*MB;}
+      function B2(){document.getElementById("user_B").value = 2*MB;}
+      function B3(){document.getElementById("user_B").value = 3*MB;}
+      function B4(){document.getElementById("user_B").value = 4*MB;}
+      function B5(){document.getElementById("user_B").value = 5*MB;}
+      function B6(){document.getElementById("user_B").value = 6*MB;}
+      function B7(){document.getElementById("user_B").value = 7*MB;}
+      function B8(){document.getElementById("user_B").value = 8*MB;}
+      function B9(){document.getElementById("user_B").value = 9*MB;}
+      function B10(){document.getElementById("user_B").value = 10*MB;}
+      function B11(){document.getElementById("user_B").value = 11*MB;}
+      function B12(){document.getElementById("user_B").value = 12*MB;}
+
+      function MA0(){
+        MA = -1;
+      }
+
+      function PA0(){
+        MA = 1;
+      }
+
+      function MB0(){
+        MB = -1;
+      }
+
+      function PB0(){
+        MB = 1;
+      }
+
 
   </script>
 
@@ -242,9 +262,9 @@
                       </div>
                       <div class="row">
                         <div class="btn-group">
-                          <a type="button" class="btn btn-primary" > - </a>
+                          <a type="button" class="btn btn-primary" onclick="PA0();"> &plus; </a>
                           <a type="button" class="btn btn-primary" onclick="A0();">0</a>
-                          <a type="button" class="btn btn-primary"> - </a>                    
+                          <a type="button" class="btn btn-primary" onclick="MA0();"> &minus; </a>           
                         </div>
                       </div>
 
@@ -303,9 +323,9 @@
                         </div>
                         <div class="row">
                           <div class="btn-group">
-                            <a type="button" class="btn btn-primary" > - </a>
-                            <a type="button" class="btn btn-primary" onclick="B0();">0</a>
-                            <a type="button" class="btn btn-primary"> - </a>                    
+                          <a type="button" class="btn btn-primary" onclick="PB0();"> &plus; </a>
+                          <a type="button" class="btn btn-primary" onclick="A0();">0</a>
+                          <a type="button" class="btn btn-primary" onclick="MB0();"> &minus; </a>                      
                           </div>
                         </div>
                   </div>
