--- a/level01_925148.html
+++ b/level01_925148.html
@@ -201,7 +201,7 @@
       <div id="myProgress">
       <div id="myBar">0%</div>
       </div>
-      <h6 style="color:red;"> <b>Instructions:</b> Order doesn't metter; Use the virtual keys. </h6>
+      <h6 style="color:rgb(201,48,44);"> <b>Instructions:</b> Order doesn't metter; Use the virtual keys. </h6>
     </div>  
     <div class="col-xs-3"></div>
   </div>
@@ -211,8 +211,8 @@
       <div class="row text-center" >
           <div class="col-xs-2"></div>
           <div class="col-xs-8">
-            <h3 class="name" >  A <a style="color:red;"> + </a> B  = <a style="color:gray;" id="soma" >   </a></h3>
-            <h3 class="name" > A <a style="color:red;"> &times; </a> B  = <a style="color:gray;" id="produto"></a></h3>
+            <h3 class="name" >  A <a style="color:rgb(201,48,44);"> + </a> B  = <a style="color:gray;" id="soma" >   </a></h3>
+            <h3 class="name" > A <a style="color:rgb(201,48,44);"> &times; </a> B  = <a style="color:gray;" id="produto"></a></h3>
           </div>
           <div class="col-xs-2"></div>
       </div>
